--- a/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
+++ b/Sunduk.PWA/Components/Knowledge/GeneralPrograming.razor
@@ -1,9 +1,13 @@
-﻿<style>
-    .ex{padding-right: 20px; font-family: 'Roboto Mono', monospace; font-size: x-small;}
+﻿@using MudBlazor.Services
+@implements IAsyncDisposable
+
+<style>
+    .ex{padding-right: @PaddingRight; font-family: 'Roboto Mono', monospace; font-size: @FontSize;}
 </style>
 <style>
-    .desc{font-style: italic; font-size: x-small;}
+    .desc{font-size: @FontSize; font-style: italic; font-weight: lighter}
 </style>
+
 
 <MudText Typo="Typo.body2">@info1</MudText>
 <MudField Variant=Variant.Filled Label="Пример УП" DisableUnderLine=true>
@@ -94,6 +98,53 @@
 
 @code 
 {
+    [Inject] IBreakpointService BreakpointListener { get; set; }
+
+    private Guid _subscriptionId;
+    private Breakpoint breakpoint;
+
+    public string FontSize { get
+        {
+            switch (breakpoint)
+            {
+                case Breakpoint.Xs: return "xx-small";
+                case Breakpoint.Sm: return "x-small";
+                default: return "medium";
+            }
+        } }
+
+    public string PaddingRight { get
+        {
+            switch (breakpoint)
+            {
+                case Breakpoint.Xs: return "10px";
+                case Breakpoint.Sm: return "15px";
+                default: return "25px";
+            }
+        } }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+	{
+		if (firstRender)
+		{
+			var subscriptionResult = await BreakpointListener.Subscribe((breakpoint) =>
+			{
+				InvokeAsync(StateHasChanged);
+			}, new ResizeOptions
+			{
+				ReportRate = 250,
+				NotifyOnBreakpointOnly = true,
+			});
+
+			breakpoint = subscriptionResult.Breakpoint;
+			_subscriptionId = subscriptionResult.SubscriptionId;
+			StateHasChanged();
+		}
+
+		await base.OnAfterRenderAsync(firstRender);
+	}
+	public async ValueTask DisposeAsync() => await BreakpointListener.Unsubscribe(_subscriptionId);
+
     MudMessageBox mbox { get; set; }
 
     string info1 =
