--- a/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
+++ b/Sunduk.PWA/Components/Knowledge/ProgrammingG01.razor
@@ -2,10 +2,10 @@
 @implements IAsyncDisposable
 
 <style>
-    .ex{padding-right: @PaddingRight; font-family: 'Roboto Mono', monospace; font-size: @FontSize;}
+    .ex{padding-right: @Design.GetPaddingRight(breakpoint); font-family: 'Roboto Mono', monospace; font-size: @Design.GetFontSize(breakpoint);}
 </style>
 <style>
-    .desc{font-size: @FontSize; font-style: italic; font-weight: lighter}
+    .desc{font-size: @Design.GetFontSize(breakpoint); font-style: italic; font-weight: lighter}
 </style>
 
 
@@ -50,26 +50,6 @@
 
     private Guid _subscriptionId;
     private Breakpoint breakpoint;
-
-    public string FontSize { get
-        {
-            switch (breakpoint)
-            {
-                case Breakpoint.Xs: return "xx-small";
-                case Breakpoint.Sm: return "x-small";
-                default: return "medium";
-            }
-        } }
-
-    public string PaddingRight { get
-        {
-            switch (breakpoint)
-            {
-                case Breakpoint.Xs: return "10px";
-                case Breakpoint.Sm: return "15px";
-                default: return "25px";
-            }
-        } }
 
     MudMessageBox absMbox { get; set; }
     MudMessageBox incMbox { get; set; }
